# Personal-Gists

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR_NOTES.md  PowerShell_Style_Guide.md  README.md  maintenance.conf  repo_inventory.json  topic_map.md
docs/: index.md
modules/python/data-science/: README.md  pyproject.toml
modules/python/data-science/data_science/: __init__.py  cli.py
modules/python/data-science/examples/: data-science_example.py
modules/python/data-science/tests/: test_data_science.py
modules/python/document-tools/: README.md  pyproject.toml
modules/python/document-tools/document_tools/: __init__.py  cli.py
modules/python/document-tools/examples/: document-tools_example.py
modules/python/document-tools/tests/: test_document_tools.py
powershell/: Backup-ReWASDConfigs.ps1  Bump-Poetry-Deps-Latest.ps1  Create-DSProj.ps1  Create-IndexShortcuts.ps1  Create-PythonVirtualEnv.ps1  Display-DirectoryTree.ps1  Ensure-PoetryAvailability.ps1  Example-PSProfileWithSourcedFuncs.ps1  Fix-Windows-BT.ps1  Full-Uninstall-Vortex-and-Valheim.ps1  Install-ChocoSoftware.ps1  Maintain-Choco.ps1  Make-SpotifyPlaylistsPrivate.ps1  Set-SpotifyPlaylistsPrivate.ps1  Start-Albion-Data-Project.ps1  Toggle-SecurityServices.ps1  Update-PythonDependencies.ps1  create_desktop_index_shortcuts.ps1  create_remote_git_repo.ps1  post_reformat_choco_install.ps1  profile.ps1
python/: datasets.py  etl_focused.py  general.py  modeling_focused.py  pdf_to_md.py
scripts/: create_desktop_index_shortcuts.ps1  make_spotify_playlists_private.ps1  (+2 more)
(+78 files in other folders)
